closes #242, fix code smells